# recipamatic

./: .gitignore  README.md  README_POST_CREATE.md  docker-compose.yml
.github/copilot/: context.json
ai/: plan.md
ai/docs/: 1-foundation.md  2-recipe-core.md  3-social-integration.md  4-audio-transcription.md  5-frontend.md  README.md
deploy/: nginx.conf
py/: README.md  pyproject.toml
py/scratch_space/insta_/: load_.ipynb
py/scratch_space/langid_/: identify.ipynb
py/scratch_space/recipe_core_/: create.ipynb  create_from_note.ipynb  dev01.ipynb
py/scratch_space/recipe_note_/: dev01.ipynb  holder_.ipynb
py/scratch_space/whisper_/: transcribe.ipynb
py/src/recipamatic/api/: backend.py  crud.py  models.py
py/src/recipamatic/auth/: dependencies.py  jwt.py  models.py  oauth.py  repository.py  router.py  settings.py
py/src/recipamatic/config/: recipamatic_config.py  recipamatic_paths.py
py/src/recipamatic/cook/: recipe_core_transcriber.py
py/src/recipamatic/cook/recipe_core/: editor.py  holder.py  recipe_core.py  section_idx.py  section_idx_finder.py  transcriber.py
py/src/recipamatic/cook/recipe_note/: holder.py  model.py
py/src/recipamatic/langchain_openai_/: chat_openai_config.py
py/src/recipamatic/social/insta/: loader.py  structures.py
py/src/recipamatic/utils/: datetime_.py  langchain_.py  pathlib_.py
py/src/recipamatic/whisperer/: whisperer.py
py/tests/config/: test_env_vars.py  test_recipamatic_paths.py
py/tests/cook/recipe_note/: test_holder.py
sv/: package-lock.json  package.json  svelte.config.js  vite.config.ts
(+25 files in other folders)
